fix: different spacing in social buttons text

--- a/src/components/shared/ui/SocialLoginButton/SocialLoginButton.module.css
+++ b/src/components/shared/ui/SocialLoginButton/SocialLoginButton.module.css
@@ -22,6 +22,13 @@
     font-family: 'Roboto', sans-serif;
     font-size: 18px;
     line-height: 21px;
-    letter-spacing: -0.02em;
+    letter-spacing: 0.02em;
 }
 
+.larger-spacing {
+    letter-spacing: 0.02em;
+}
+
+.smaller-spacing {
+    letter-spacing: -0.02em;
+}
